# MachineVision

./: .gitignore  DEVELOPMENT_PLAN.md  GIT_CONVENTIONS.md  LICENSE  MATH-470_Project.tex  README.md  fix_sync.py  pyproject.toml  requirements.txt
app/: Kalman.py  SVD.py  __init__.py  main.py
docs/: test_log.md
firmware/: README.md  calibrate.py  camera_test.py  circle_drawing.py  color_config.py  main.py
pc_app/: config.py
tests/: test_config_defaults.py
