[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machinevision"
version = "0.1.0"
description = "Real-time predictive ball tracking system"
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["pc_app"]
addopts = "-v --strict-markers --disable-warnings"
filterwarnings = [
  "ignore::DeprecationWarning",
]
